fix center align

--- a/stylesheets/website.css
+++ b/stylesheets/website.css
@@ -16,9 +16,15 @@ img {
   width: 30%;
 }
 
-h1, h2, h3 {
+h1, h2{
   font-family: 'Roboto Condensed', sans-serif;
   text-align: center;
+  letter-spacing: -1px;
+  font-weight: bold;
+}
+
+h3 {
+  font-family: 'Roboto Condensed', sans-serif;
   letter-spacing: -1px;
   font-weight: bold;
 }
